[package]
name = "zoomer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.6.0"
glm = "0.2.3"
sdl2-sys = "0.35.2"
screenshots = "0.6.0"

[dependencies.sdl2]
version = "0.35.2"
features = ["bundled", "static-link"]
